// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Language service allowJs option should compile js file for allowJs true with outDir 1`] = `
  ===[ FILE: test-allow-js.js ]===================================================
  "use strict";
  Object.defineProperty(exports, "__esModule", { value: true });
  exports.default = 42;
  //# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJmaWxlIjoidGVzdC1hbGxvdy1qcy5qcyIsIm1hcHBpbmdzIjoiOztBQUFBLGtCQUFlLEVBQUUsQ0FBQSIsIm5hbWVzIjpbXSwic291cmNlcyI6WyJ0ZXN0LWFsbG93LWpzLmpzIl0sInNvdXJjZXNDb250ZW50IjpbImV4cG9ydCBkZWZhdWx0IDQyIl0sInZlcnNpb24iOjN9
  ===[ INLINE SOURCE MAPS ]=======================================================
  file: test-allow-js.js
  mappings: ';;AAAA,kBAAe,EAAE,CAAA'
  names: []
  sources:
    - test-allow-js.js
  sourcesContent:
    - export default 42
  version: 3
  ================================================================================
`;

exports[`Language service allowJs option should compile js file for allowJs true without outDir 1`] = `
  ===[ FILE: test-allow-js.js ]===================================================
  "use strict";
  Object.defineProperty(exports, "__esModule", { value: true });
  exports.default = 42;
  //# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJmaWxlIjoidGVzdC1hbGxvdy1qcy5qcyIsIm1hcHBpbmdzIjoiOztBQUFBLGtCQUFlLEVBQUUsQ0FBQSIsIm5hbWVzIjpbXSwic291cmNlcyI6WyJ0ZXN0LWFsbG93LWpzLmpzIl0sInNvdXJjZXNDb250ZW50IjpbImV4cG9ydCBkZWZhdWx0IDQyIl0sInZlcnNpb24iOjN9
  ===[ INLINE SOURCE MAPS ]=======================================================
  file: test-allow-js.js
  mappings: ';;AAAA,kBAAe,EAAE,CAAA'
  names: []
  sources:
    - test-allow-js.js
  sourcesContent:
    - export default 42
  version: 3
  ================================================================================
`;

exports[`Language service diagnostics should not report diagnostics for test file which doesn't exist when compiling import module file 1`] = `
Array [
  "[level:20] compileAndUpdateOutput(): get compile output
",
  "[level:20] compileFn(): compiling using language service
",
  "[level:20] updateMemoryCache(): update memory cache for language service
",
  "[level:20] visitSourceFileNode(): hoisting
",
  "[level:20] compileFn(): computing diagnostics using language service
",
]
`;

exports[`Language service diagnostics should only report diagnostics for imported modules but not test files without cache 1`] = `
Array [
  "[level:20] compileAndUpdateOutput(): get compile output
",
  "[level:20] compileFn(): compiling using language service
",
  "[level:20] updateMemoryCache(): update memory cache for language service
",
  "[level:20] visitSourceFileNode(): hoisting
",
  "[level:20] compileFn(): computing diagnostics using language service
",
]
`;

exports[`Language service diagnostics should report diagnostics for imported modules as well as test files which use imported modules with cache 1`] = `
Array [
  "[level:20] compileAndUpdateOutput(): get compile output
",
  "[level:20] compileFn(): compiling using language service
",
  "[level:20] updateMemoryCache(): update memory cache for language service
",
  "[level:20] visitSourceFileNode(): hoisting
",
  "[level:20] compileFn(): computing diagnostics using language service
",
  "[level:20] updateMemoryCache(): update memory cache for language service
",
  "[level:20] compileFn(): computing diagnostics using language service for test file which uses the module
",
]
`;

exports[`Language service diagnostics should throw error when cannot compile 1`] = `
"Unable to require \`.d.ts\` file for file: test-cannot-compile.d.ts.
This is usually the result of a faulty configuration or import. Make sure there is a \`.js\`, \`.json\` or another executable extension available alongside \`test-cannot-compile.d.ts\`."
`;

exports[`Language service diagnostics shouldn't report diagnostic when processing file isn't used by any test files 1`] = `
Array [
  "[level:20] compileAndUpdateOutput(): get compile output
",
  "[level:20] compileFn(): compiling using language service
",
  "[level:20] updateMemoryCache(): update memory cache for language service
",
  "[level:20] visitSourceFileNode(): hoisting
",
  "[level:20] compileFn(): computing diagnostics using language service
",
]
`;

exports[`Language service diagnostics shouldn't report diagnostics for test file name that has been type checked before 1`] = `
Array [
  "[level:20] compileAndUpdateOutput(): get compile output
",
  "[level:20] compileFn(): compiling using language service
",
  "[level:20] updateMemoryCache(): update memory cache for language service
",
  "[level:20] visitSourceFileNode(): hoisting
",
  "[level:20] compileFn(): computing diagnostics using language service
",
  "[level:20] compileAndUpdateOutput(): get compile output
",
  "[level:20] compileFn(): compiling using language service
",
  "[level:20] updateMemoryCache(): update memory cache for language service
",
  "[level:20] visitSourceFileNode(): hoisting
",
  "[level:20] compileFn(): computing diagnostics using language service
",
]
`;

exports[`Language service jsx option should compile tsx file for jsx preserve 1`] = `
  ===[ FILE: test-jsx.tsx ]=======================================================
  "use strict";
  var App = function () {
      return <>Test</>;
  };
  //# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJmaWxlIjoidGVzdC1qc3gudHN4IiwibWFwcGluZ3MiOiI7QUFDUSxJQUFNLEdBQUcsR0FBRztJQUNWLE9BQU8sRUFBRSxJQUFJLEdBQUcsQ0FBQTtBQUNsQixDQUFDLENBQUEiLCJuYW1lcyI6W10sInNvdXJjZXMiOlsidGVzdC1qc3gudHN4Il0sInNvdXJjZXNDb250ZW50IjpbIlxuICAgICAgICBjb25zdCBBcHAgPSAoKSA9PiB7XG4gICAgICAgICAgcmV0dXJuIDw+VGVzdDwvPlxuICAgICAgICB9XG4gICAgICAiXSwidmVyc2lvbiI6M30=
  ===[ INLINE SOURCE MAPS ]=======================================================
  file: test-jsx.tsx
  mappings: ';AACQ,IAAM,GAAG,GAAG;IACV,OAAO,EAAE,IAAI,GAAG,CAAA;AAClB,CAAC,CAAA'
  names: []
  sources:
    - test-jsx.tsx
  sourcesContent:
    - |2-
  
              const App = () => {
                return <>Test</>
              }
            
  version: 3
  ================================================================================
`;

exports[`Language service jsx option should compile tsx file for other jsx options 1`] = `
  ===[ FILE: test-jsx.tsx ]=======================================================
  "use strict";
  var App = function () {
      return React.createElement(React.Fragment, null, "Test");
  };
  //# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJmaWxlIjoidGVzdC1qc3gudHN4IiwibWFwcGluZ3MiOiI7QUFDUSxJQUFNLEdBQUcsR0FBRztJQUNWLE9BQU8saURBQVMsQ0FBQTtBQUNsQixDQUFDLENBQUEiLCJuYW1lcyI6W10sInNvdXJjZXMiOlsidGVzdC1qc3gudHN4Il0sInNvdXJjZXNDb250ZW50IjpbIlxuICAgICAgICBjb25zdCBBcHAgPSAoKSA9PiB7XG4gICAgICAgICAgcmV0dXJuIDw+VGVzdDwvPlxuICAgICAgICB9XG4gICAgICAiXSwidmVyc2lvbiI6M30=
  ===[ INLINE SOURCE MAPS ]=======================================================
  file: test-jsx.tsx
  mappings: ';AACQ,IAAM,GAAG,GAAG;IACV,OAAO,iDAAS,CAAA;AAClB,CAAC,CAAA'
  names: []
  sources:
    - test-jsx.tsx
  sourcesContent:
    - |2-
  
              const App = () => {
                return <>Test</>
              }
            
  version: 3
  ================================================================================
`;
